# valiant_valiant_inequality_prover

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
prover/: prover.py
src/valiant_valiant_inequality_prover/: valiant_valiant_inequality_prover.py
valiant_valiant_inequality_prover.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
